--- a/test/test.html
+++ b/test/test.html
@@ -4,7 +4,7 @@
   <script src="http://code.jquery.com/jquery-latest.js"></script>
   <link rel="stylesheet" href="http://code.jquery.com/qunit/git/qunit.css" type="text/css" media="screen" />
 <script type="text/javascript" src="http://code.jquery.com/qunit/git/qunit.js"></script>
-<script src="jquery.validizzle.js" type="text/javascript" charset="utf-8"></script>
+<script src="../lib/jquery.validizzle.js" type="text/javascript" charset="utf-8"></script>
 
   <script>
   $(document).ready(function(){
