marching forward to alpha

--- a/test/test.html
+++ b/test/test.html
@@ -235,26 +235,29 @@
 				$('<div class="oninvalid"></div>').text($el.val()).appendTo('body');
 			}
 		});
-		strictEqual(v($el), false, "onInvalid callback fires when validation fails");
-		//strictEqual($('.oninvalid').length, 1, "onInvalid callback fires on validation failure");
+		strictEqual(v($el), false, "validation should fail");
+		strictEqual($('.oninvalid').length, 1, "onInvalid callback fires on validation failure");
 		
 		$el.val('eeee');
-		strictEqual(v($el), true, "onInvalid callback shouldn't fire when validation passes");
-		//strictEqual($('.oninvalid').length, 1, "onInvalid callback doesn't fire when validation passes");
+		strictEqual(v($el), true, "validation should pass");
+		strictEqual($('.oninvalid').length, 1, "onInvalid callback doesn't fire when validation passes");
 	});
 	
-	// test("test onValid callback", function(){
-	// 	var $el = setUp("dddd").validizzle({
-	// 		builtins: ['required'],
-	// 		matchRegex: /\w{4}/,
-	// 		onInvalid: function($el){
-	// 			$('<div id="onvalid"></div>').text($el.val()).appendTo('body');
-	// 		}
-	// 	});
-	// 	strictEqual(v($el), true, "onvalid callback fires when validation passes");
-	// 	strictEqual($('#onvalid').length, 1, "onValid callback fires on validation failure");
-	// });
-	
+	test("test onValid callback", function(){
+		var $el = setUp("dddd").validizzle({
+			builtins: ['required'],
+			matchRegex: /\w{4}/,
+			onValid: function($el){
+				$('<div id="onvalid"></div>').text($el.val()).appendTo('body');
+			}
+		});
+		strictEqual(v($el), true, "validation should pass");
+		strictEqual($('.oninvalid').length, 1, "onInvalid callback fires on validation failure");
+		
+		$el.val('eee');
+		strictEqual(v($el), false, "validation should fail");
+		strictEqual($('.oninvalid').length, 1, "onInvalid callback doesn't fire when validation passes");
+	});
   });//end of $(document).ready
 
 	
